--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
     "cSpell.language": "en-GB",
-    "astyle.astylerc": "${workspaceFolder}/Tools/CodeStyle/astylerc"
+    "astyle.astylerc": "${workspaceFolder}/Tools/CodeStyle/astylerc",
+    "files.associations": {
+        "*.parm": "cmake",
+        "*.dat": "cmake",
+        "*.inc": "cmake",
+        "array": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "numeric": "cpp"
+    }
 }
